// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-directive-remains-at-top.ts - typescript-verify: custom-directive-remains-at-top.ts 1`] = `
// below is a directive prologue
'use custom'

import './SetupEnvironment';
import type { Period } from './Period'

"this is not a directive prologue";

function foo() {
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// below is a directive prologue
"use custom";

import "./SetupEnvironment";

import type { Period } from "./Period";

// below is a directive prologue

("this is not a directive prologue");

function foo() {}

`;

exports[`multiple-directives-remain-at-top.ts - typescript-verify: multiple-directives-remain-at-top.ts 1`] = `
// below is a directive prologue
  'use custom' ; /* more directives... */ 'enable typecheck'
                 'forbid IE'

import './SetupEnvironment';
import type { Period } from './Period'

"this is not a directive prologue";

function foo() {
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// below is a directive prologue
"use custom";
/* more directives... */

"enable typecheck";
"forbid IE";

import "./SetupEnvironment";

import type { Period } from "./Period";

// below is a directive prologue
/* more directives... */ ("enable typecheck");

("this is not a directive prologue");

function foo() {}

`;

exports[`strict-directive-remains-at-top.ts - typescript-verify: strict-directive-remains-at-top.ts 1`] = `
// below is a directive prologue
'use strict'

import './SetupEnvironment';
import type { Period } from './Period'

"this is not a directive prologue";

function foo() {
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// below is a directive prologue
"use strict";

import "./SetupEnvironment";

import type { Period } from "./Period";

// below is a directive prologue

("this is not a directive prologue");

function foo() {}

`;

exports[`string-literal-at-top-is-pushed-down.ts - typescript-verify: string-literal-at-top-is-pushed-down.ts 1`] = `
; 'use strict'

import './SetupEnvironment';
import type { Period } from './Period'

"this is not a directive prologue";

function foo() {
}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
import "./SetupEnvironment";

import type { Period } from "./Period";

("use strict");

("this is not a directive prologue");

function foo() {}

`;
